# herds-cli

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-cli.yml
.groundcrew/: config.json
docs/design-docs/: TEMPLATE.md  auth-auto-refresh.md  cli-calendar-skip-reason-display.md  cli-ignored-fields.md  xdg-config-paths.md
docs/plans/: harness-review-replace-sys-exit-with-exceptions.md  reasoning-gaps-type-contracts.md
docs/references/: google-auth.md  homebrew.md  url-extractions-cli-testing.md
herds_cli/: README_GOOGLE_AUTH.md  __init__.py  __main__.py  api.py  calendar_status_display.py  cli.py  image_display.py  images.py  oauth.py  output.py  paths.py  sessions.py  types.py
herds_cli/commands/: __init__.py  cmd_calendar.py  cmd_config.py  cmd_event_user_data.py  cmd_events.py  cmd_extractions.py  cmd_image.py  cmd_ping.py  cmd_url.py  cmd_user.py  cmd_user_settings.py
herds_cli/core/: __init__.py  base.py  config.py  exceptions.py
scripts/: generate_formula.py  version_guard.py
tests/cli/: conftest.py  test_cli_calendar.py  test_cli_config.py  test_cli_events.py  test_cli_extractions.py  test_cli_image.py  test_cli_ping.py  test_cli_url.py  test_cli_user.py  test_cli_user_settings.py  test_sessions.py
tests/scripts/: test_generate_formula.py  test_version_guard.py
tests/unit/: conftest.py  test_api_client.py  test_api_extractions.py  test_base_helpers.py  test_calendar_prompt.py  test_calendar_status_display.py  test_config.py  test_exceptions.py  test_helpers.py  test_image_uploader.py  (+2 more)
(+5 files in other folders)
