[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herds-cli"
version = "1.0.0"
description = "Command-line interface for the Herds event platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Herds Team" }]
dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "rich>=10.0",
    "pytz>=2023.3",
    "tzlocal>=5.0",
]

[project.scripts]
herds = "herds_cli.cli:cli"
